[package]
license = "MIT"
edition = "2021"
version = "0.1.0"
name = "whisper_cli"
readme = "README.md"
homepage = "https://github.com/m1guelpf/whisper-cli-rs"
description = "A command line interface for whisper-rs"
repository = "https://github.com/m1guelpf/whisper-cli-rs"
authors = ["Miguel Piedrafita <soy@miguelpiedrafita.com>"]
keywords = ["whisper", "openai", "cli", "transcribe"]
categories = ["command-line-utilities"]

[[bin]]
name = "whisper"
path = "src/main.rs"

[dependencies]
dirs = "5.0"
num = "0.4.0"
anyhow = "1.0.68"
indicatif = "0.17.2"
whisper-rs = "0.8.0"
futures-util = "0.3.25"
cpal = { version = "0.15.2" }
ringbuf = { version = "0.3.3" }
uuid = { version = "1.2.2", features = ["v4"] }
tokio = { version = "1.23.0", features = ["full"] }
clap = { version = "4.0.32", features = ["derive"] }
serde = { version = "1.0.151", features = ["derive"] }
reqwest = { version = "0.11.13", features = ["blocking", "stream"] }
audrey = { version = "0.3.0", default-features = false, features = ["wav"] }
async-fn-stream = "0.2.0"
futures = "0.3.28"
